--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -1,12 +1,21 @@
 server {
-  charset utf-8;
-  listen 80 default_server;
-  server_name _;
+  listen 80;
+  sendfile on;
+  default_type application/octet-stream;
 
-  # angular app & front-end files
+  gzip on;
+  gzip_http_version 1.1;
+  gzip_disable      "MSIE [1-6]\.";
+  gzip_min_length   256;
+  gzip_vary         on;
+  gzip_proxied      expired no-cache no-store private auth;
+  gzip_types        text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+  gzip_comp_level   9;
+
+  root /usr/share/nginx/html;
+
   location / {
-    root /code/frontend;
-    try_files $uri /index.html;
+    try_files $uri $uri/ /index.html =404;
   }
 
   # node api reverse proxy
