--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node src/server.ts",
-    "build": "tsc && cp .env dist/ && cp package.json dist/ && npm install",
+    "build": "tsc && cp .env dist/ && cp package.json dist/ && cd dist && npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Stanimira Vlaeva",
